@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE RateResponse SYSTEM "http://www.shipwire.com/exec/download/RateResponse.dtd">
+<RateResponse>
+  <Status>OK</Status>
+  <Order sequence="1">
+    <Quotes>
+      <Quote method="GD">
+        <Warehouse>Reno (Pick/Pack Saver)</Warehouse>
+        <Service>FESCO Ground</Service>
+        <Cost currency="USD">7.73</Cost>
+        <DeliveryEstimate>
+          <Minimum units="days">1</Minimum>
+          <Maximum units="days">5</Maximum>
+        </DeliveryEstimate>
+      </Quote>
+    </Quotes>
+  </Order>
+</RateResponse>
